La recherche fonctionne maintenant à partir de tous les pages.

--- a/pages/ascii.html
+++ b/pages/ascii.html
@@ -29,7 +29,7 @@
                 <h1>Table ASCII</h1>
                 <hr width="100%" color="white">
                 <table class="tftable" border="1">
-                    <tr id="titre-table"><th><h3>Décimal</h3></th><th><h3>Octal</h3></th><th><h3>Hexadécimal</h3></th><th><h3>Binaire</h3></th><th><h3>Caractère</h3></th></tr>                  
+                    <tr id="titre-table"><th><h3>Décimal</h3></th><th><h3>Octal</h3></th><th><h3>Hexadécimal</h3></th><th><h3>Binaire</h3></th><th><h3>Caractère</h3></th></tr>
                     <tr><td>000</td><td>000</td><td>00</td><td>00000000</td><td>NUL (Null char.)</td></tr>
                     <tr><td>001</td><td>001</td><td>01</td><td>00000001</td><td>SOH (Start of Header)</td></tr>
                     <tr><td>002</td><td>002</td><td>02</td><td>00000010</td><td>STX (Start of Text)</td></tr>
@@ -169,5 +169,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="../js/tableau.js"></script>
         <script src="../js/scroll.js"></script>
+        <script src="../js/recherche.js"></script>
     </body>
 </html>
