--- a/pages/convertisseur.html
+++ b/pages/convertisseur.html
@@ -58,5 +58,6 @@
         <script src="../js/convertisseur.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="../js/scroll.js"></script>
+        <script src="../js/recherche.js"></script>
     </body>
 </html>
