--- a/pages/js.html
+++ b/pages/js.html
@@ -26,7 +26,7 @@
         <main>
             <article>
                 <h1>Carte bornes éléctriques</h1>
-                <hr width="100%" color="white">  
+                <hr width="100%" color="white">
                 <form id="question">
                     <h3 id="text">Avez vous une voiture éléctrique ?</h3>
                     <div>
@@ -66,5 +66,6 @@
         <script src="../js/stations.json"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="../js/scroll.js"></script>
+        <script src="../js/recherche.js"></script>
     </body>
 </html>
