--- a/pages/recherche.html
+++ b/pages/recherche.html
@@ -24,10 +24,11 @@
             </nav>
         </header>
         <main>
-            <article>
+            <section>
                 <h1>Recherche</h1>
                 <hr width="100%" color="white">
-            </article>
+                <article></article>
+            </section>
         </main>
         <footer>
             <p></p>
