--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="js/image-index.js"></script>
+        <script src="js/recherche.js"></script>
         <script src="js/scroll.js"></script>
     </body>
 </html>
