--- a/pages/404.html
+++ b/pages/404.html
@@ -37,5 +37,6 @@
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="../js/scroll.js"></script>
+        <script src="../js/recherche.js"></script>
     </body>
 </html>
