Ajout de style css responsives. (mediaquerry)

--- a/index.html
+++ b/index.html
@@ -25,23 +25,25 @@
         </header>
         <main>
             <section>
-                <article>
+                <article id="artIndex1">
                     <h1>OUTILS</h1>
-                    <hr width="94.5%" color="white">
-                    <a class="imageZoom" href="./pages/calculette.html" onmouseover="hoverFiltre(1)" onmouseout="outFiltre(1)" >
-                        <img id="img1" class="image" src="images/calculette.png">
-                        <div id="filtre1" class="filtre filtre-hidden">
-                            <h3>Calculette</h3>
-                            <hr width="70%" color="black">
-                        </div>
-                    </a>
-                    <a class="imageZoom" href="./pages/convertisseur.html" onmouseover="hoverFiltre(2)" onmouseout="outFiltre(2)" >
-                        <img id="img2" class="image" src="images/convertisseur.png">
-                        <div id="filtre2" class="filtre filtre-hidden">
-                            <h3>Convertisseur</h3>
-                            <hr width="70%" color="black">
-                        </div>
-                    </a>
+                    <hr width="95%" color="white">
+                    <div id="images">
+                        <a class="lienImage" href="./pages/calculette.html" onmouseover="hoverFiltre(1)" onmouseout="outFiltre(1)" >
+                            <img id="img1" class="image" src="images/calculette.png">
+                            <div id="filtre1" class="filtre filtre-hidden">
+                                <h3>Calculette</h3>
+                                <hr width="70%" color="black">
+                            </div>
+                        </a>
+                        <a class="lienImage" href="./pages/convertisseur.html" onmouseover="hoverFiltre(2)" onmouseout="outFiltre(2)" >
+                            <img id="img2" class="image" src="images/convertisseur.png">
+                            <div id="filtre2" class="filtre filtre-hidden">
+                                <h3>Convertisseur</h3>
+                                <hr width="70%" color="black">
+                            </div>
+                        </a>
+                    </div>
                 </article>
                 <article id="a-propos">
                     <h1>A PROPOS</h1>
